--- a/backend/control-server/src/main/resources/public/index.html
+++ b/backend/control-server/src/main/resources/public/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--suppress ALL -->
 <html lang="en">
 
 <head>
@@ -13,8 +14,9 @@
     </div>
 
     <div id="chat"></div>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="http://d3js.org/d3.v3.min.js"></script>
     <script>
+
 
         Array.prototype.flatMap = function (lambda) {
             return Array.prototype.concat.apply([], this.map(lambda));
@@ -70,7 +72,7 @@
             console.log("expected: " + "1,3,6,7");
         })();
 
-        let myGraph = () => {
+        var agentGraph = () => {
             // Add and remove elements on the graph object
 
             this.addNode = function (id) {
@@ -79,6 +81,7 @@
             };
 
             this.addNewNodes = (newNodes) => {
+                console.log("adding new nodes!");
                 nodes.added(newNodes).forEach(element => {
                     addNode(element);
                 });
@@ -98,6 +101,7 @@
             };
 
             this.addLink = function (source, target, value) {
+                console.log("adding link!");
                 links.push({ "source": findNode(source), "target": findNode(target), "value": value });
                 update();
             };
@@ -141,7 +145,7 @@
             };
 
             this.removeAllNodes = function () {
-                nodes.splice(0, links.length);
+                nodes.splice(0, nodes.length);
                 update();
             };
 
@@ -252,71 +256,35 @@
 
             // Make it all go
             update();
+            return this;
         }
 
         (() => {
-
-            let graph;
-            let d3Data = (() => {
-                let nodes = [];
-                let links = [];
-
-                this.mergeNodes = (newNodes) => {
-                    console.log(newNodes);
-                    nodes.push(newNodes);
-                }
-
-                this.mergeLinks = (newLinks) => {
-                    console.log(newLinks);
-                    links.push(newLinks)
-                }
-
-                this.getNodes = () => {
-                    return nodes;
-                }
-
-                this.getLinks = () => {
-                    return links;
-                }
-
-                this.fuckingDeleteThis = () => {
-                    nodes = [];
-                    links = [];
-                }
-
-                return this;
-            })();
-
-            //<NodeName, Information Associated>
-            let d3DataInformation = (() => {
-                this.agentMap = {};
-
-                this.updateAgents = (newAgents) => {
-                    // newAgents is an array of agents
-                    newAgents.forEach((element) => {
-                        if (!(element.name in agentMap)) {
-                            agentMap[element.name] = element.data;
-                        } else {
-                            // Sort out and insert data here lole
-                            agentMap[element.name] = element.data;
-                        }
-                    });
-                }
-
-                return this;
-            })();
-            let updateNodes = (d3Data, d3DataInformation, newData) => {
-            }
-
-
-            // Establish the WebSocket connection and set up event handlers
-            // let webSocket = new WebSocket("ws://localhost:4567/ws");
-            let webSocket = {};
+           // Establish the WebSocket connection and set up event handlers
+            let webSocket = new WebSocket("ws://localhost:4567/ws");
+            var graph = agentGraph("#svgdiv");
 
             webSocket.onmessage = function (msg) {
-                console.log(JSON.parse(msg.data));
-                //updateChat(msg);
+                let jsonData = JSON.parse(msg.data);
+                if ('nodes' in jsonData){
+                    handleAgentData(jsonData);
+                }
             };
+
+            let handleAgentData = (jsonData) => {
+                let ids = jsonData.nodes.map(nodes => {
+                    return nodes.id;
+                }); 
+
+                let links = testJSON.nodes.flatMap((x) => {
+                    return x.links;
+                });
+
+
+                graph.addNewNodes(ids);
+                graph.replaceLinks(links);
+            }
+
 
             webSocket.onclose = function () {
                 console.log("Websocket Closed.");
