--- a/backend/control-server/src/main/resources/public/test.html
+++ b/backend/control-server/src/main/resources/public/test.html
@@ -8,16 +8,12 @@
 </head>
 
 <body>
-    <div id="chatControls">
-        <input id="message" placeholder="Type your message">
-        <button id="send">Send</button>
-    </div>
-
     <div id="chat"></div>
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="polyfills.js"></script>  
     <script src="graph.js"></script>  
-    <script src="ws-handler.js"></script>
+    <script src="test-harness.js"></script>
 </body>
+
 
 </html>
