--- a/backend/control-server/src/main/resources/public/index.html
+++ b/backend/control-server/src/main/resources/public/index.html
@@ -5,6 +5,24 @@
 <head>
     <meta charset="UTF-8">
     <title>IS7 HETS</title>
+    <style>
+        .link {
+            stroke: #2E2E2E;
+            stroke-width: 2px;
+        }
+
+        .node {
+            stroke: #fff;
+            stroke-width: 2px;
+        }
+        .textClass {
+            stroke: #323232;
+            font-family: "Lucida Grande", "Droid Sans", Arial, Helvetica, sans-serif;
+            font-weight: normal;
+            stroke-width: .5;
+            font-size: 14px;
+        }
+    </style>
 </head>
 
 <body>
