--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
 
-    <link rel="icon" href="../favicon.ico"/>
+    <link rel="icon" href="favicon.ico"/>
 
     <!-- Index stylesheet -->
-    <link rel="stylesheet" href="../CSS/index-style.css">
+    <link rel="stylesheet" href="CSS/index-style.css">
     <!-- Font Awesome for icons -->
-    <link rel="stylesheet" href="../brower-components/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="brower-components/font-awesome/css/font-awesome.min.css">
     <!-- Bootstrap stylesheet -->
-    <link rel="stylesheet" href="../brower-components/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../brower-components/bootstrap/css/bootstrap-3_3_7.min.css">
+    <link rel="stylesheet" href="brower-components/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="brower-components/bootstrap/css/bootstrap-3_3_7.min.css">
 
     <title>Intelligent Systems Project 3</title>
   </head>
@@ -28,16 +28,16 @@
             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="agents.html">Agents</a>
+            <a class="nav-link " href="HTML/agents.html">Agents</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" href="#Reference">Reference</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="logging.html">Logs</a>
+            <a class="nav-link" href="HTML/logging.html">Logs</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="stats.html">Stats</a>
+            <a class="nav-link" href="HTML/stats.html">Stats</a>
           </li>
         </ul>
       </div>
@@ -64,10 +64,10 @@
     </div><!-- /.container -->
 
     <!-- Jquery javascript AJAX -->
-    <script src="../brower-components/jquery/jquery-3.2.1.min.js"></script>
+    <script src="brower-components/jquery/jquery-3.2.1.min.js"></script>
 
     <!-- Bootstrap javascript -->
-    <script src="../brower-components/bootstrap/js/popper.min.js"></script>
-    <script src="../brower-components/bootstrap/js/bootstrap.min.js"></script>
+    <script src="brower-components/bootstrap/js/popper.min.js"></script>
+    <script src="brower-components/bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
