--- a/frontend/index.html
+++ b/frontend/index.html
@@ -62,8 +62,8 @@
 
       <div class="collapse navbar-collapse" id="navigation-bar">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#index">Home <span class="sr-only">(current)</span></a>
+          <li class="nav-item">
+            <a class="nav-link active" href="#index">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#agents">Agents</a>
