--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -62,8 +62,8 @@
 
       <div class="collapse navbar-collapse" id="navigation-bar">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#index">Home <span class="sr-only">(current)</span></a>
+          <li class="nav-item">
+            <a class="nav-link active" href="#index">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#agents">Agents</a>
@@ -107,7 +107,7 @@
             </div>
 
             <div class="col">
-              <div class="box">
+              <div class="box" style="overflow:auto;">
                 <div id="agent-data"></div>
               </div>
             </div>
